www/css/app.css
/* ... */
.logo {
    padding-bottom: 6px;
}

.nav-bar-title {}

.bar .title {
    height: 45px;
    text-align: center;
}


/*.platform-android*/


/*.platform-android*/

.bar .title {
    text-align: center;
}

.bar-header {
    border-bottom-width: 0px;
}

.bar-subheader {
    top: 45px;
}

.list {}

.contact {
    margin: 0px 0px 20px 0px !important;
    padding: 0px !important;
}

.white-icon {
    color: #ffffff;
    font-size: 18px;
    font-weight: bold !important;
    padding-top: 4px;
}

span.back-text {
    display: none !important;
}

.load-more-results {
    background-color: #fafafa;
    height: 80px;
    text-align: center;
}

.scroll-to-top {
    position: fixed;
    bottom: 10px;
    right: 12px;
    z-index: 1000000000;
    height: 25px;
    width: 50px;
    color: black;
}

.fixed {
    bottom: 50px;
    right: 10px;
    position: fixed;
}



/*.has-header {
  top: 136px;
}*/

.filter-pane {
    background-color: rgba(64, 60, 95, 0.98);
}

.filter-pane .nav-bar-container .bar-header {
    background-color: #3c385c;
    color: #ffffff;
    height: 55px;
}

.filter-pane .nav-bar-container .bar-header .button.back-button {
    background-color: #3c385c;
    color: #ffffff;
}

.filter-pane .nav-bar-container .bar-header .title.title-left.header-item {
    top: 5px;
    /*left: 0px !important;*/
    text-align: center;
}

.copyright {
    font-weight: normal;
}

.profile-section {
    margin: auto;
    padding: 5px;
}

.profile-item {
    padding: 10px;
    margin: auto;
    width: 100%;
}

.profile-data {
    color: #3c3c42;
    font-family: rock-sans-normal;
    font-size: 18px;
}

.profile-address {
    color: #3c3c42;
    font-family: rock-sans-normal;
    font-size: 16px;
}

.profile-address-directions {
    color: #3c3c42;
    font-family: rock-sans-normal;
    font-size: 15px;
    float: right !important;
}


/* Start Style refactor -- mhudson */


/* Mobile header */

/* Header Positioning Rules - platform
   Needed because of device headers
*/


body.platform-android .bar-header {
    top: 28px;
}

body.platform-android .search-bar{
  margin-top: 74px;
}

body.platform-ios .bar-header {
    top: 0px;
}

body.platform-ios .search-bar{
  margin-top: 64px;
}

/* Scollable Content  */
/*.has-subheader.scroll-content.ionic-scroll.overflow-scroll.has-header.has-footer {
    top: 136px;
}*/

/* Main Search Results */
.search-pane-content.has-subheader.scroll-content.ionic-scroll.has-header.has-footer {
    top: 190px;
    bottom: 45px;
}

/* Filter Pane Positioning */
.filter-pane-content.has-subheader.scroll-content.ionic-scroll.has-header.has-footer {
    top: 120px;
    bottom: 46px;
}

body.platform-ios .filter-pane-content{
    padding: 0 20px;
}

.nbcunow-mobile-logo {
    background-image: url(../img/NBCUN-logo.svg);
    width: 95px;
    height: 20px;
    background-repeat: no-repeat;
    background-size: contain;
    position: relative;
    top: 5px;
    display: inline-block;
    margin-right: 6px;
}

.nav-bar-title {
    color: #360279;
    position: absolute;
    left: 50%;
    margin-left: -85px;
}

.button.back-button {
    background-color: white;
    color: #360279;
}

/* Search Items */

.search-list-row.item{
  border-bottom: 1px solid #ebebeb;
}

.search-list-row .item-content{
  padding-right:16px !important;
}

.search-list-row-even {
  background-color: #fafafa;
}

.search-list-row-even .item-content{
  background: transparent;
}

.search-list-row i{
  color: #adb9ca;
  position: relative;
  top: 1px;
  margin-right: 6px;
  font-size: 14px;
}

.search-result-title {
    font-family: rock-sans-bold;
    color: #3c3c42;
    font-size: 15px;
    line-height: 15px;
}

.search-result-data {
    font-family: rock-sans-normal;
    white-space: normal;
    color: #6f7680;
    font-size: 13px;
}

.search-result-email{
    font-family: rock-sans-normal;
    white-space: normal;
    color: #29a5db;
    font-size: 12px;
    word-wrap: break-word;
    line-height: 14px;
    display: block;
}

.search-result-phone{
  color: #6463a0;
  font-family: rock-sans-normal;
  font-size: 12px;
}

.search-no-result{
    font-family: rock-sans-normal;
    padding: 30px 0;
    text-align: center;
    color: #333333;
    border: 4px dashed #ebebeb;
    margin: 60px 0;
    border-radius: 6px;
}

/* Item Counter */

.collection-repeat-after-container .more-results{
  font-family: rock-sans-bold;
  font-size: 14px;
  padding-top: 10px;
  color: #5c5b94;
  text-transform: capitalize;
}

.collection-repeat-after-container .more-results.gray{
    color: #c0c0c0;
}

.collection-repeat-after-container .results-count{
  font-family: rock-sans-bold;
  font-size: 16px;
  color: #5c5b94;
}

.scroll-to-top{
  font-family: rock-sans-bold;
  font-size: 14px;
  color:#360279;
}

/* Mobile Filter Control */

.platform-android .filter-bar {
    border-radius: 0px;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
}

.platform-ios .filter-bar {
    border-radius: 0px;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
}

.filter-bar {
    background-color: #eef0f3;
    background-image: none;
    height: 64px;
    text-align: center;
    border-radius: 0px;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
}

.filter-bar a {
    line-height: 64px;
    color: #56558b;
}

.filter-bar a i {
    position: relative;
    transform: rotate(270deg);
    font-size: 8px;
    font-weight: bold;
    position: absolute;
    margin-left: 15px;
    margin-bottom: 0;
    margin-top: -1px;
}

.filter-bar a i::before {
    font-weight: bold;
}

.filter-bar>a {
    text-decoration: none;
}

.filter-pane .has-subheader.filter-pane-content.scroll-content.ionic-scroll.overflow-scroll.has-header.has-footer {
    top: 75px;
    padding-left: 20px;
    padding-right: 20px;
}
/* ... */

